--- a/styles/general.css
+++ b/styles/general.css
@@ -45,8 +45,9 @@ html {
     border-radius: 8px;
     font-size: 12px;
     border-radius: 0px;
-    height: 60px;
+    height: 40px;
     width: 40px;
+    border-radius: 50%;
     background-color: #2c2c2c;
  }
  #btn-back-top:hover {
